# checkcheck

./: .env  DEMO_OUTPUT.md  EXAMPLES.md  FEATURES.md  FINAL-SOLUTION.md  INSTALL.md  NEW-FEATURES.md  PRODUCTION.md  QUICK-START.md  README.md  SERVER-FIX.md  bot.py  debug-network.sh  decoder.py  env.example  fix-server-network.sh  pyproject.toml  replace_text.py  requirements.txt  run-frontend-only.sh  run-frontend-prod.sh  run-production.sh  run-simple.sh  run.sh  start-port-8080.sh  start-production-simple.sh  stop.sh  update_cmap.py  update_xref.py
.claude/: settings.local.json
frontend/: .eslintrc.json  next.config.ts  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/download/[filename]/: route.ts
frontend/src/app/api/generate-pdf/: route.ts
frontend/src/app/api/history/: route.ts
frontend/src/components/ui/: amount-input.tsx  datetime-picker.tsx  history-panel.tsx  input-with-generator.tsx  phone-input.tsx  receipt-input.tsx  recipient-input.tsx
frontend/src/lib/: generators.ts
