[project]
name = "checkcheck"
version = "0.1.0"
description = "PDF Receipt Generator Bot"
requires-python = ">=3.11"
dependencies = [
    "anyio==4.10.0",
    "certifi==2025.8.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "python-telegram-bot==22.3",
    "sniffio==1.3.1",
    "typing_extensions==4.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
